Fixed images on mobile

--- a/src/scss/partials/_index.scss
+++ b/src/scss/partials/_index.scss
@@ -8,6 +8,7 @@
     padding: 5px;
     img {
       width: 350px;
+      max-width: 100%;
       height: auto;
     }
 
